--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,12 +1,12 @@
 .page {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    min-height: 100vh;
     max-width: 1280px;
     min-width: 320px;
     background-color: #000000;
     margin: 0 auto 0;
-    padding: 45px 0 60px;
+    padding: 0px 0 0px;
     font-family: 'inter', 'Arial', sans-serif;
     color: #FFFFFF;
     -moz-osx-font-smoothing: grayscale;
