--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@
 @import url(./blocks/page/__footer/page__footer.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__navbar/header__navbar.css);
+@import url(./blocks/header/__email/header__email.css);
+@import url(./blocks/header/__link/header__link.css);
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__image-container/profile__image-container.css);
 @import url(./blocks/profile/__image/profile__image.css);
@@ -32,8 +35,10 @@
 @import url(./blocks/footer/footer.css);
 @import url(./blocks/footer/__name/footer__name.css);
 @import url(./blocks/popup/popup.css);
+@import url(./blocks/popup/__logo/popup__logo.css);
 @import url(./blocks/popup/__container/popup__contaner.css);
 @import url(./blocks/popup/__title/popup__title.css);
+@import url(./blocks/popup/__title/_ok/popup__title_ok.css);
 @import url(./blocks/popup/__form/popup__form.css);
 @import url(./blocks/popup/__error/popup__error.css);
 @import url(./blocks/popup/__input/popup__input.css);
@@ -46,3 +51,10 @@
 @import url(./blocks/popup/__foto-image/popup__foto-image.css);
 @import url(./blocks/popup/__foto-name/popup__foto-name.css);
 @import url(./blocks/popup/_opened/popup_opened.css);
+@import url(./blocks/register/register.css);
+@import url(./blocks/register/__title/rerister__title.css);
+@import url(./blocks/register/__form/register__form.css);
+@import url(./blocks/register/__input/register__input.css);
+@import url(./blocks/register/__button-save/register__button-save.css);
+@import url(./blocks/register/__description/register__description.css);
+@import url(./blocks/register/__sing-in/register__sing-in.css);
